# paddle-tests

./: README.md  download_models.sh  main.py  models_to_onnx.sh  pyproject.toml  run_model_onnx.sh  run_model_paddle.sh  run_paddle.py
.dvc/: config
data/output/: memory_usage.csv
metrics/cpu/: memory_usage_12_cpu.csv  memory_usage_1_cpu.csv  memory_usage_paddle_300b2.csv
metrics/mac/: memory_usage_.csv
models/: .gitignore  ch_ppocr_mobile_v2.0_cls_infer.dvc  cls_onnx.dvc  det_onnx.dvc  en_PP-OCRv3_det_infer.dvc  en_PP-OCRv3_rec_infer.dvc  paddle.dvc  paddle_onnx.dvc  rapid_onnx.dvc  rec_onnx.dvc
notebooks/: convert_to_onnx.ipynb  paddle.ipynb
scripts/: convert_models.sh  download_models.sh
src/: onnx_ocr.py  paddle_ocr.py  rapid_ocr.py  settings.py  utils.py
