[project]
name = "paddle-tests"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "paddle2onnx>=1.3.1",
    "paddleocr>=2.9.1",
    "paddlepaddle>=2.6.2",
    "pymupdf>=1.25.1",
    "onnx==1.17.0",
    "pandas>=2.2.3",
    "matplotlib>=3.10.0",
    "seaborn>=0.13.2",
    "rapidocr-onnxruntime>=1.4.3",
    "typer>=0.15.1",
    "dvc>=3.58.0",
    "dvc-s3>=3.2.0",
]

# In some cases, you may want to use CPU-only builds in some cases, 
# but CUDA-enabled builds in others, with the choice toggled by a user-provided 
# extra (e.g., uv sync --extra cpu vs. uv sync --extra cu124).

[project.optional-dependencies]
cpu = ["torch>=2.5.1", "torchvision>=0.20.1", "onnxruntime>=1.20.1"]
cu124 = ["torch>=2.5.1", "torchvision>=0.20.1", "onnxruntime-gpu>=1.20.1"]
mac = ["torch>=2.5.1", "torchvision>=0.20.1", "onnxruntime>=1.20.1"]


[tool.uv]
conflicts = [[{ extra = "cpu" }, { extra = "cu124" }, { extra = "mac" }]]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu124", extra = "cu124" },
    { index = "pytorch-cu124", extra = "mac" },
]
torchvision = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu124", extra = "cu124" },
    { index = "pytorch-cu124", extra = "mac" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://pypi.org/simple"
explicit = true

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
ignore = ["F401", "F841"]

[dependency-groups]
dev = ["ipykernel>=6.29.5", "ipywidgets>=8.1.5", "paddleocr-convert>=0.0.19"]
